--- a/src/styling/style.scss
+++ b/src/styling/style.scss
@@ -8,6 +8,20 @@ html {
     padding: none;
 }
 
+// Z-Index Guide 
+
+// 10. Demand Popup:
+//  9. Screen Barrier:
+//  8. Nav Button: 
+//  7. Nav Panel:
+//  6. Page Tool: 
+//  5. Header: 
+//  4. Screen: 
+//  3. Dash Popup: 
+//  2. Dash Barrier: 
+//  1. Dash:
+//  0. Quick Tools: 
+
 #userHeader {
     background: red;
     position: absolute;
@@ -15,27 +29,48 @@ html {
     right: 0;
     width: 100vw;
     height: 40px;
-    z-index: 2;
+    z-index: 5;
 }
 
-#userNav {
+#navAnchor {
     background: white;
     position: absolute;
     top: 3px;
     right: 3px;
     width: 26px;
     height: 26px;
-    z-index: 4;
+    z-index: 5;
     border-radius: 5px;
+
+}
+#navButton {
+    position: absolute;
+    margin: 3px;
+    width: 20px;
+    height: 20px;
+
 }
 
 #userDash {
     background: green;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 40px;
+    left: 0;
+    // width: calc(100vw - 320px);
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 40px);
     margin: 0;
+    z-index: 1;
+}
+
+#sidebar {
+    background: yellow;
+    position: absolute;
+    display: block;
+    width: 320px;
+    height: calc(100vh - 40px);
+    top: 40px;
+    right: 0;
     z-index: 0;
 }
+
