--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  font-family: 'Roboto', sans-serif;
+  text-rendering: optimizeLegibility;
 }
 
 html {
@@ -15,35 +17,118 @@ html {
   top: 0;
   right: 0;
   width: 100vw;
+  height: 48px;
+  z-index: 5;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 40px auto;
+      grid-template-columns: 40px auto;
+  -ms-grid-rows: 20px 20px 8px;
+      grid-template-rows: 20px 20px 8px;
+      grid-template-areas: "thumbnail userName" "thumbnail userID" "userProgress userProgress";
+}
+
+#userHeader img {
   height: 40px;
-  z-index: 5;
+  width: 40px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  grid-area: thumbnail;
+  background-color: gray;
+  overflow: hidden;
 }
 
-#navAnchor {
-  background: white;
-  position: absolute;
-  top: 3px;
-  right: 3px;
-  width: 26px;
-  height: 26px;
-  z-index: 5;
+#userHeader #userName {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: userName;
+  font-size: 16px;
+  line-height: 16px;
+  margin: 4px 0 0 5px;
+  font-weight: 500;
+  color: white;
+}
+
+#userHeader #userID {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: userID;
+  font-size: 14px;
+  font-weight: 400;
+  margin: 3px 0 3px 10px;
+  color: #ffcaca;
+}
+
+#userHeader #userID span {
+  margin: 0 2px;
+}
+
+#userHeader #userProgress {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: userProgress;
+  background-color: #900000;
+}
+
+#navCrop {
+  overflow: hidden;
   border-radius: 5px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  z-index: 5;
+  width: 30px;
+  height: 30px;
 }
 
-#navButton {
+#navCrop #navPanel {
+  background: white;
+  width: 300px;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 270px 30px;
+      grid-template-columns: 270px 30px;
+  -ms-grid-rows: 30px auto;
+      grid-template-rows: 30px auto;
+      grid-template-areas: "navPage navButton" "navBody navBody";
+}
+
+#navCrop #navButton {
   position: absolute;
-  margin: 3px;
-  width: 20px;
-  height: 20px;
+  margin: 4px;
+  right: 0;
+  width: 22px;
+  height: 22px;
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: navButton;
+}
+
+#navCrop #navPage {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: navPage;
+  height: 22px;
+  padding: 0 0 0 5px;
+  margin: 4px 0 4px 4px;
+  background-color: blue;
+  border-radius: 4px;
+  border: none;
+  position: absolute;
+  left: 30px;
+  width: 231px;
 }
 
 #userDash {
   background: green;
   position: absolute;
-  top: 40px;
+  top: 48px;
   left: 0;
   width: 100vw;
-  height: calc(100vh - 40px);
+  height: calc(100vh - 48px);
   margin: 0;
   z-index: 1;
 }
@@ -53,8 +138,8 @@ html {
   position: absolute;
   display: block;
   width: 320px;
-  height: calc(100vh - 40px);
-  top: 40px;
+  height: calc(100vh - 48px);
+  top: 48px;
   right: 0;
   z-index: 0;
 }
